@@ -1,3 +1,8 @@
+2014-04-08 German Arias <germanandre@gmx.es>
+
+	* Modules/Editors/ProjectCenter/PCEditorView.m (-insertText:): Add a
+	comment for last commit.
+
 2014-04-06 German Arias <germanandre@gmx.es>
 
 	* Headers/ProjectCenter/PCProjectLauncher.h: Add new variable
